efk/kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    name: kibana
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: kibana
  ports:
  - name: kibana
    port: 5601
    protocol: TCP
    targetPort: 5601
