efk/kibana/kibana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
spec:
  rules:
  - host:  kibana.liangzy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
